package starships;

public class Bullet {
    private Position position;
    private Vector vector;
    private Speed speed;
    private Damage damage;
}
