package starships;

public class Ship {

    private Position position;
    private Vector vector;
    private Speed speed;
    private Weapon weapon;
    private Health health;
    private Damage damage;

    public Ship move(Action action){
        //TODO hago un switch de las distintas actions implementandolas.
        return null;
    }

    public void shoot(){
        // TODO implement
    }

}
