package starships;

public class Speed {
}
