package starships;

public class Weapon {
    private Bullet bullet;
}
